# functrace

./: LICENSE  README.md  pyproject.toml
docs/: conf.py  index.rst
docs/contents/: api_reference.rst
examples/: builtins_logging.py
functrace/: __init__.py  api.py  type_hints.py  utilities.py
tests/: __init__.py  test_function_call.py  test_time_formatter.py
