[build-system]
requires = ['setuptools', 'setuptools-scm', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'functrace'
description = 'Python library for tracing function calls and performance'
readme = 'README.md'
license = {text = 'MIT'}
authors = [{name = 'Idan Hazan'}]
keywords= ['trace', 'tracer', 'tracing', 'track', 'tracker', 'tracking']
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Topic :: Software Development :: Debuggers',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: System :: Monitoring',
]
requires-python = '>= 3.10'
dynamic = ['version']

[project.urls]
homepage = 'https://pypi.org/project/functrace'
repository = 'https://github.com/idanhazan/functrace'
documentation = 'https://functrace.readthedocs.io'

[tool.setuptools]
packages = ['functrace']

[tool.setuptools.dynamic.version]
attr = 'functrace.__version__'